Agregue imagen a mi HTML

--- a/MascotaLucas.html
+++ b/MascotaLucas.html
@@ -50,9 +50,9 @@
     </header>
     <main>
         <h2>HOLAA GUSTO EN CONOCERTE SOY LUCAS</h2>
-        <img src="IMG/IMAGEN_LUCAS.jpeg" alt="IMAGEN_LUCAS">
+        <img src="../examenU1_Vargas_Ledesma_Piero_Leonardo-/img/lucas.jpg" alt="IMAGEN_LUCAS">
         <p>Lucas es un perro muy activo y cariñoso. Siempre está listo para jugar y dar paseos largos por el parque. Su lealtad y alegría son contagiosas.</p>
-        <img src="IMG/IMAGEN_FAMILIA.jpeg" alt="IMAGEN_FAMILIA">
+        <img src="../examenU1_Vargas_Ledesma_Piero_Leonardo-/img/lucasYo.jpg" alt="IMAGEN_FAMILIA">
         <p>Una vez, Lucas encontró un juguete en el parque y lo llevó de vuelta a casa. ¡Fue un momento muy divertido! Es increíble cómo puede alegrar el día de cualquiera.</p>
     </main>
 </body>
